CSS: (repair of layout overlapping) *monkey-article: - deletion of a grid container's fixed height, - change from fully relative rows' heigh(fr) to minmax(px,fr) *footer: - increase of a top margin from 30px to 200px

--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -6,10 +6,11 @@
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 200px;
     text-align: center;
     background-color: rgb(84, 95, 157);
     overflow: hidden;
+
 }
 
 .footer__div {
