--- a/css/modules/monkey-article.css
+++ b/css/modules/monkey-article.css
@@ -5,8 +5,9 @@
     gap: 20px;
     margin-top: 20px;
     grid-template-columns: 100%;
-    grid-template-rows: 10% 60% 30%;
-    height: 800px;
+    grid-template-rows: minmax(50px, 1fr) minmax(450px, 9fr) minmax(150px, 3fr);
+
+    /* height: 700px; */
 }
 
 .monkey-article__title {
@@ -23,8 +24,12 @@
 
 }
 
+.monkey-article__img__container {
+    overflow: hidden;
+}
+
 .monkey-article__img {
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
 
     /* display: inline-block; */
@@ -41,7 +46,8 @@
         display: -ms-grid;
         display: grid;
         -ms-grid-columns: 4fr 2fr;
-        grid-template-columns: 4fr 2fr;
+        grid-template-columns: 5fr 2fr;
+
         -ms-grid-rows: 1fr 4fr;
         grid-template-rows: 1fr 4fr;
     }
